css/styles.css
/* IT Services CSS styles */

.it_block{
	float: left;
	width: 45%;
	text-align: center;
	border: 1px solid #ccc;
	margin: .25em;
	padding: .25em;
}
.it_block_fullwidth {
	float: left;
	width: 97%;
	text-align: center;
	border: 1px solid #ccc;
	margin: .25em;
	padding: .25em;
}
.icon_url a {
	text-decoration: none;
	border-bottom: none;
}
	
.it_block h3{
	text-align: center;
}
.it_block p, .it_block ul{
	text-align: left;
}
.post-content .dashicons{
	border-radius: 50%;
	border: 5px solid #cb2026;
}
.post-content .dashicons, .post-content .dashicons-before:before{
	width: 75px;
	height: 75px;
	font-size: 4.5em;
	color: #fff;
	background-color: #990000;
	padding: .2em;
}
.helpDeskButton{
	padding:.25em; 
	margin: .25em;
	background-color: #cb2026;
	border: 1px solid #990000;
	display:block;
	border-radius: .25em;
	color: #fff;
	text-decoration: none;
	text-align: center;
	text-transform:uppercase;
	font-weight:bold;
}
.helpDeskButton:hover{
	background-color: #990000;
}


/*---------------------------------------------------*/
/* Responsive */
/*---------------------------------------------------*/
@media only screen and (max-width: 1000px) {
.it_floatLeft {
	float: none;
	width: 100%;
}
.it_icons img {
	margin-left: 10%;
}
@media only screen and (max-width: 480px) {
.it_floatLeft {
	float: none;
	width: 100%;
}
.post-content img {
	height: 50%;
}
	

